// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`node/inline-edit/inline-edit-app.spec.ts > inline edit end of line selected 1`] = `
[
  {
    "content": [
      {
        "text": "I am working in file \`poem.txt\` with the following contents:
\`\`\`txt
Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.
\`\`\`

I have the following text selected on line 1:
\`\`\`
Silver shadows dance with ease.
Stars above like diamonds bright,
\`\`\`

Please change 'Silver' to 'Golden'",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`node/inline-edit/inline-edit-app.spec.ts > inline edit mid-line selected 1`] = `
[
  {
    "content": [
      {
        "text": "I am working in file \`poem.txt\` with the following contents:
\`\`\`txt
Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.
\`\`\`

I have the following text selected on line 1:
\`\`\`
shadows dance with ease.
Stars
\`\`\`

Please change 'shadows' to 'ghosts'",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`node/inline-edit/inline-edit-app.spec.ts > performs inline edit on file 1`] = `
[
  {
    "content": [
      {
        "text": "I am working in file \`poem.txt\` with the following contents:
\`\`\`txt
Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.
\`\`\`

My cursor is on line 0: Moonlight whispers through the trees,

Please change 'Silver' to 'Golden' in line 2",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;

exports[`node/inline-edit/inline-edit-app.spec.ts > performs inline edit with selection 1`] = `
[
  {
    "content": [
      {
        "text": "I am working in file \`poem.txt\` with the following contents:
\`\`\`txt
Moonlight whispers through the trees,
Silver shadows dance with ease.
Stars above like diamonds bright,
Paint their stories in the night.
\`\`\`

I have the following text selected on line 1:
\`\`\`
Silver shadows dance with ease.
\`\`\`

Please change 'Silver' to 'Golden'",
        "type": "text",
      },
    ],
    "role": "user",
  },
]
`;
